<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>op3_voice_control</name>
  <version>0.0.1</version>
  <description>ROBOTIS OP3 Voice Control Package with TTS and Speech Recognition</description>
  <maintainer email="robotis@robotis.com">robotis</maintainer>
  <license>Apache License 2.0</license>
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
